practica preparcial, faltan detalles

--- a/PREPARCIAL1/Preparcial.html
+++ b/PREPARCIAL1/Preparcial.html
@@ -12,9 +12,9 @@
 
 
     <header>
-        <img src="img/logo-UTN-1.png" class="logo" alt="Logo utn">
+        <img src="https://www.utn.edu.ar/images/logo-utn.png" class="logo" alt="Logo utn" width="500">
         <nav>
-            <ul>
+            <ul id="encabezado">
                 <li><a href="#" class="active">Inicio</a></li>
                 <li><a href="#">Sobre nosotros</a></li>
                 <li><a href="#">Contacto</a></li>
@@ -25,7 +25,7 @@
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
                     stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5.121 17.804A13.937 13.937 0 0112 16c2.5 0 4.847.655
-        6.879 1.804M15 10a3 3 0 11-6 0 3 3 0 016 0zm6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                6.879 1.804M15 10a3 3 0 11-6 0 3 3 0 016 0zm6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
                 </svg>
             </a>
         </div>
@@ -121,9 +121,9 @@
             <div>
                 <h4> Columna 3</h4>
                 <p> FACULTAD REGIONAL ROSARIO
-                    Universidad Tecnológica Nacional 
+                    Universidad Tecnológica Nacional
                 </p>
-                <p> 
+                <p>
                     CONTACTOS: ZEBALLOS 1341 -
                     S2000BQA - ROSARIO
                 </p>
@@ -131,8 +131,11 @@
             </div>
             <div>
                 <h4> Columna 4</h4>
-                
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3347.8702577851323!2d-60.64631218860589!3d-32.95443467347982!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b7ab11d0eb49c3%3A0x11f1d3d54f950dd0!2sUniversidad%20Tecnol%C3%B3gica%20Nacional%20%7C%20Facultad%20Regional%20Rosario!5e0!3m2!1ses!2sar!4v1694038375211!5m2!1ses!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3347.8702577851323!2d-60.64631218860589!3d-32.95443467347982!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b7ab11d0eb49c3%3A0x11f1d3d54f950dd0!2sUniversidad%20Tecnol%C3%B3gica%20Nacional%20%7C%20Facultad%20Regional%20Rosario!5e0!3m2!1ses!2sar!4v1694038375211!5m2!1ses!2sar"
+                    width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
 
